--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
+- degree: Full Stack Webdeveloper Nanodegre
   uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  year: June, 2014 &mdash; January, 2022
   # awards:
-  # summary:
+  # summary: what
